# Legion-Fabric-Scaffold

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildme.sh  subme.sh
deploy/: legion.py  legion.sh.mko
src/: CMakeLists.txt  Model.cl  Model.cpp  Model.cu  Model.h  build.cpp  build.h  cl_main.cpp  cuda_main.cu  helpers.cu  helpers.h  kernel.cl  parallel_main.cpp
test/: CMakeLists.txt  catch.cpp  catch_cl.cl  catch_cuda.cu  catch_mpi.cpp  catch_omp.cpp
