cmake_minimum_required(VERSION 2.8)
project(OpenCL_Scaffold)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(OpenCL)
include_directories(${OpenCL_INCLUDE_DIRS})
link_directories(${OpenCL_LIBRARY})
set(CMAKE_CXX_FLAGS "-std=c++11 ")
include_directories(src)
include_directories(lib)

add_subdirectory(src)
add_subdirectory(test)
