add_executable(catch catch.cpp)
add_executable(catch_mpi catch_mpi.cpp)
target_link_libraries(catch modellib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
target_link_libraries(catch_mpi modellib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
target_compile_features(catch PRIVATE cxx_nullptr)
target_compile_features(catch_mpi PRIVATE cxx_nullptr)
